--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~8.0.0",
     "firebase": ">= 5.5.7 <8",
     "hammerjs": "^2.0.8",
+    "ng-simple-slideshow": "^1.2.9",
     "ngx-material-timepicker": "^5.2.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
