--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "ng-simple-slideshow": "^1.2.9",
     "ngx-material-timepicker": "^5.2.3",
     "rxjs": "~6.5.4",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -40,8 +40,8 @@
     "@angular/language-service": "~9.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "firebase-tools": "^6.10.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.5.2",
