--- a/angular.json
+++ b/angular.json
@@ -156,5 +156,8 @@
       }
     }
   },
-  "defaultProject": "resume"
+  "defaultProject": "resume",
+  "cli": {
+    "analytics": "320ae957-0ca4-4508-90e3-1d40ffd36fd6"
+  }
 }
