--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "~9.0.0",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
     "@angular/fire": "^5.2.3",
-    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.0",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "~9.0.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "firebase": ">= 5.5.7 <8",
     "hammerjs": "^2.0.8",
-    "ng-simple-slideshow": "^1.2.9",
     "ngx-material-timepicker": "^5.2.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
