--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
-    "firebase": ">= 5.5.7 <8",
+    "firebase": "^7.14.2",
     "hammerjs": "^2.0.8",
+    "highcharts": "^8.0.4",
+    "highcharts-angular": "^2.4.0",
     "ngx-material-timepicker": "^5.2.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-defocus": "^2.0.6",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
