--- a/package.json
+++ b/package.json
@@ -14,42 +14,41 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.9",
-    "@angular/cdk": "~9.0.0",
+    "@angular/cdk": "~10.1.3",
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
-    "@angular/fire": "^5.2.3",
-    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/fire": "^5.4.2",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.9",
-    "@angular/material": "~9.0.0",
+    "@angular/material": "~10.1.3",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
-    "firebase": "^7.14.2",
-    "hammerjs": "^2.0.8",
-    "highcharts": "^8.0.4",
-    "highcharts-angular": "^2.4.0",
-    "ngx-material-timepicker": "^5.2.3",
-    "rxjs": "~6.5.4",
+    "firebase": "^7.18.0",
+    "highcharts": "^8.1.2",
+    "highcharts-angular": "^2.7.0",
+    "ngx-material-timepicker": "^5.5.3",
+    "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-defocus": "^2.0.6",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.20",
+    "@angular-devkit/architect": "^0.803.29",
     "@angular-devkit/build-angular": "~0.1000.6",
     "@angular/cli": "~10.0.6",
     "@angular/compiler-cli": "~10.0.9",
     "@angular/language-service": "~10.0.9",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.54",
     "codelyzer": "^6.0.0",
     "firebase-tools": "^6.10.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.5.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
+    "inquirer-autocomplete-prompt": "^1.0.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
