--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/angular-instantsearch/bundles/instantsearch.min.css",
+              "node_modules/angular-instantsearch/bundles/instantsearch-theme-algolia.min.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
