--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/platform-browser": "~11.0.2",
     "@angular/platform-browser-dynamic": "~11.0.2",
     "@angular/router": "~11.0.2",
+    "algoliasearch": "^4.9.0",
+    "algoliasearch-helper": "^3.4.4",
+    "angular-instantsearch": "^2.3.0",
     "firebase": "^7.0.0 || ^8.0.0",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.2.2",
@@ -42,10 +45,12 @@
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.2",
     "@angular/language-service": "~11.0.2",
+    "@types/algoliasearch": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.7",
     "codelyzer": "^6.0.1",
+    "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.5.2",
     "inquirer-autocomplete-prompt": "^1.3.0",
@@ -56,11 +61,10 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "open": "^7.0.3",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5",
-    "firebase-tools": "^8.0.0",
-    "open": "^7.0.3"
+    "typescript": "~4.0.5"
   }
 }
