--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod && firebase deploy --only hosting",
+    "deploy": "ng build --configuration production && firebase deploy --only hosting",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.2",
+    "@angular/animations": "~12.2.16",
     "@angular/cdk": "~11.0.1",
-    "@angular/common": "~11.0.2",
-    "@angular/compiler": "~11.0.2",
-    "@angular/core": "~11.0.2",
+    "@angular/common": "~12.2.16",
+    "@angular/compiler": "~12.2.16",
+    "@angular/core": "~12.2.16",
     "@angular/fire": "^6.1.2",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.0.2",
+    "@angular/forms": "~12.2.16",
     "@angular/material": "~11.0.1",
-    "@angular/platform-browser": "~11.0.2",
-    "@angular/platform-browser-dynamic": "~11.0.2",
-    "@angular/router": "~11.0.2",
+    "@angular/platform-browser": "~12.2.16",
+    "@angular/platform-browser-dynamic": "~12.2.16",
+    "@angular/router": "~12.2.16",
     "algoliasearch": "^4.9.0",
     "algoliasearch-helper": "^3.4.4",
     "angular-instantsearch": "^2.3.0",
@@ -37,14 +37,14 @@
     "tslib": "^2.0.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-defocus": "^2.0.6",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.29",
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.2",
-    "@angular/language-service": "~11.0.2",
+    "@angular-devkit/architect": "^0.1202.15",
+    "@angular-devkit/build-angular": "~12.2.15",
+    "@angular/cli": "~12.2.15",
+    "@angular/compiler-cli": "~12.2.16",
+    "@angular/language-service": "~12.2.16",
     "@types/algoliasearch": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -56,7 +56,7 @@
     "inquirer-autocomplete-prompt": "^1.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.3.12",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -65,6 +65,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.3.5"
   }
 }
