--- a/package.json
+++ b/package.json
@@ -7,50 +7,48 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
     "deploy": "ng build --configuration production && firebase deploy --only hosting",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.16",
-    "@angular/cdk": "~11.0.1",
-    "@angular/common": "~12.2.16",
-    "@angular/compiler": "~12.2.16",
-    "@angular/core": "~12.2.16",
-    "@angular/fire": "^6.1.2",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~12.2.16",
-    "@angular/material": "~11.0.1",
-    "@angular/platform-browser": "~12.2.16",
-    "@angular/platform-browser-dynamic": "~12.2.16",
-    "@angular/router": "~12.2.16",
-    "algoliasearch": "^4.9.0",
-    "algoliasearch-helper": "^3.4.4",
-    "angular-instantsearch": "^2.3.0",
-    "firebase": "^7.0.0 || ^8.0.0",
+    "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/fire": "^7.0.4",
+    "@angular/flex-layout": "^13.0.0-beta.36",
+    "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "algoliasearch": "^4.11.0",
+    "algoliasearch-helper": "^3.7.0",
+    "angular-instantsearch": "^4.0.1",
+    "firebase": "^9.6.5",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.2.2",
     "highcharts-angular": "^2.8.2",
     "ngx-material-timepicker": "^5.5.3",
-    "rxjs": "^6.6.3",
+    "rxjs": "^7.3.0",
     "tslib": "^2.0.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-defocus": "^2.0.6",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1202.15",
-    "@angular-devkit/build-angular": "~12.2.15",
-    "@angular/cli": "~12.2.15",
-    "@angular/compiler-cli": "~12.2.16",
-    "@angular/language-service": "~12.2.16",
+    "@angular-devkit/architect": "^0.1302.0",
+    "@angular-devkit/build-angular": "~13.2.0",
+    "@angular/cli": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.0",
+    "@angular/language-service": "~13.2.0",
     "@types/algoliasearch": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.7",
     "codelyzer": "^6.0.1",
-    "firebase-tools": "^8.0.0",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.5.2",
     "inquirer-autocomplete-prompt": "^1.3.0",
@@ -62,9 +60,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "open": "^7.0.3",
-    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.5.5"
   }
 }
