--- a/package.json
+++ b/package.json
@@ -12,21 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/cdk": "^13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
+    "@angular/animations": "^14.2.5",
+    "@angular/cdk": "^14.2.4",
+    "@angular/common": "^14.2.5",
+    "@angular/compiler": "^14.2.5",
+    "@angular/core": "^14.2.5",
     "@angular/fire": "^7.0.4",
-    "@angular/flex-layout": "^13.0.0-beta.36",
-    "@angular/forms": "~13.2.0",
-    "@angular/material": "^13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "algoliasearch": "^4.11.0",
-    "algoliasearch-helper": "^3.7.0",
-    "angular-instantsearch": "^4.0.1",
+    "@angular/flex-layout": "^14.0.0-beta.40",
+    "@angular/forms": "^14.2.5",
+    "@angular/material": "^14.2.4",
+    "@angular/platform-browser": "^14.2.5",
+    "@angular/platform-browser-dynamic": "^14.2.5",
+    "@angular/router": "^14.2.5",
     "firebase": "^9.6.5",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.2.2",
@@ -38,18 +35,16 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1302.0",
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.2.0",
-    "@types/algoliasearch": "^4.0.0",
+    "@angular-devkit/architect": "^0.1402.5",
+    "@angular-devkit/build-angular": "^14.2.5",
+    "@angular/cli": "^14.2.5",
+    "@angular/compiler-cli": "^14.2.5",
+    "@angular/language-service": "^14.2.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.7",
     "codelyzer": "^6.0.1",
     "firebase-tools": "^8.0.0 || ^9.0.0",
-    "fuzzy": "^0.1.3",
     "inquirer": "^6.5.2",
     "inquirer-autocomplete-prompt": "^1.3.0",
     "jasmine-core": "~3.6.0",
@@ -62,6 +57,6 @@
     "open": "^7.0.3",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.8.4"
   }
 }
