--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "rxjs": "^7.3.0",
     "tslib": "^2.0.3",
     "tslint-config-prettier": "^1.18.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "0.14.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1602.16",
@@ -55,6 +55,6 @@
     "open": "^7.0.3",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~5.1.6"
+    "typescript": "^5.5.4"
   }
 }
